# Glimi

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  COLLAB_GUIDE.html  CONTRIBUTING.md  LICENSE  NOTICE  PYPI_README.md  README.ko.md  README.md  SPLIT_PLAN.md  START_HERE.html  bootstrap.sh  index.html  pyproject.toml  requirements.txt  run  run.bat  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
apps/: __init__.py
assets/: seed_agents.json
communities.example/: .env.example  registry.toml.example
community/: __init__.py  community.py  db.py  discord_bot.py  i18n.py  knowledge.py  log_writer.py
docs/: COLLAB_GUIDE.html  ENGINEERING_RETROSPECTIVE.md  START_HERE.html  edd.en.md  (+32 more)
glimi-community/: README.md  pyproject.toml  run.sh
glimi-community/assets/: seed_agents.json
glimi-community/assets/sample_profile_images/: README.md  catalog.json
glimi-community/community/: community.py  db.py  discord_bot.py  log_writer.py
glimi-community/community/achievements/: __init__.py  catalog_i18n_en.py  definitions.py  engine.py  judge.py
glimi-community/community/achievements/catalog/: __init__.py  _shared.py  bestie.py  character_designer.py  confession.py  daily_streak.py  first_friend_chat.py  hakooshi.py  late_night.py  long_relationship.py  matchmaker.py  mbti_collection.py  mgr_love.py  new_universe.py  oshikatsu.py  persona_love.py  photographer.py  reconciliation.py  secret_keeper.py  three_friends.py  true_self.py  tutorial_done.py  universe_collector.py
glimi-community/community/adapters/: kernel_store.py
glimi-community/community/adapters/discord/: __init__.py  channels.py
glimi-community/community/adapters/web/: __init__.py  channels.py
glimi-community/community/bot/: __init__.py  commands.py  conversation_bridge.py  core.py  handlers.py  mgr_system.py  paced_sender.py  profile_preview.py  supervisors.py  tasks.py  tool_handlers.py
glimi-community/community/core/: boot.py  channel_adapter.py  channels.py  conversation_bridge.py  dev_agent.py  dev_dispatch.py  dev_runner.py  emotion_emoji.py  formatting.py  image_crop.py  locks.py  memory.py  meta_filter.py  mgr_actions.py  monitor.py  paced_sender.py  profile_activation.py  profile_autoextract.py  profile_image.py  profile_preview.py  scoping.py  skills.py  sync.py  tool_handlers.py
glimi-community/community/core/prompts/: __init__.py  helpers.py  locale.py
glimi-community/community/core/prompts/en/: common.py  creator.py  dev.py  mgr.py  mgr_notifications.py  persona.py
glimi-community/community/glimi_imagegen/: CLAUDE.md  RESEARCH.md  __init__.py  crop.py  generate.py
glimi-community/community/platform/: __main__.py  accounts.py  app.py  db.py  demo_mock.py  demo_seed.py  setup.py  supervisor.py  web_runtime.py
glimi-community/community/platform/dashboard/: __init__.py  actions.py  context.py
glimi-community/community/platform/routers/: admin_dev.py  chat.py  communities.py  dashboard.py  pages.py  setup.py  visits.py
glimi-community/community/platform/static/: manifest.webmanifest
glimi-community/community/platform/static/css/: base.css  chat.css  dashboard.css  setup.css  tokens.css
glimi-community/community/platform/static/js/: chat.js  dashboard.js
glimi-community/community/platform/static/js/admin/: dev_requests.js  visits.js
glimi-community/community/platform/templates/: __init__.py  _chat_shell.html  _community_server_control.html  chat.html  home.html  new_community.html  setup.html
glimi-community/community/platform/templates/admin/: dev_requests.html  qa.html  visits.html
glimi-community/community/platform/templates/dashboard/: index.html
glimi-community/community/scenes/: __init__.py  base.py
glimi-community/community/scenes/tutorial/: __init__.py  handlers.py  prompts.py  scene.py  supervisor.py
glimi-community/community/skills/_examples/: meta-question-handling.ko.md
glimi-community/community/skills/meta-question-handling/: SKILL.md
glimi-community/community/supervisors/: __init__.py  base.py  chat.py  commitment.py  dev_queue.py  events.py  orchestrator.py  runner.py
glimi-community/community/tools/: cli.py  dev_runner.py  migrate.py
glimi-community/community/tui/: __main__.py  dashboard.py
glimi-community/examples/community.example/: .env.example
glimi-community/i18n/: dashboard.en.json  dashboard.ko.json  en.json  ko.json
glimi-core/: README.md  pyproject.toml
glimi-core/eval/: from_production.py  runner.py  schema.py
glimi-core/eval/golden/: fallback.jsonl  persona.jsonl  supervisor.jsonl
glimi-core/eval/reports/: latest-claude_cli.json  latest-echo.json
glimi-core/examples/dashboard_demo/: README.md  run.py
glimi-core/examples/dev_pair/: run.py
glimi-core/examples/research_buddies/: run.py
glimi-core/examples/research_desk/: README.md
glimi-core/glimi/: __init__.py  conversation.py  harness.py  observability.py  profiles.py  profiles_simple.py  runtime.py  store.py  transport.py
glimi-core/glimi/dashboard/: __init__.py  __main__.py  app.py  reader.py
glimi-core/glimi/dashboard/i18n/: dashboard.en.json  dashboard.ko.json
glimi-core/glimi/dashboard/static/css/: base.css  chat.css  dashboard.css
glimi-core/glimi/dashboard/static/js/: chat.js  dashboard.js  sw.js
glimi-core/glimi/dashboard/templates/: _chat_shell.html  _demo_list.html  agent_detail.html  base.html
glimi-core/glimi/dashboard/templates/dashboard/: _core.html
glimi-core/glimi/edd/: __init__.py  dimensions.py  history.py  report.py
glimi-core/glimi/llm/: __init__.py  anthropic_sdk.py  echo.py  grok_cli.py  pricing.py
glimi-core/glimi/skills/: README.md
glimi-core/glimi/skills/ambient-awareness/: SKILL.md
glimi-core/glimi/skills/conversation-join/: SKILL.md
glimi-core/glimi/skills/emotional-expression/: SKILL.md
glimi-core/glimi/stores/: __init__.py  memory.py
glimi-core/glimi/tools/: __init__.py  dispatcher.py  parser.py  reference.py  registry.py  result.py  validator.py
glimi-workspace/: README.md  pyproject.toml  run.sh
glimi-workspace/workspace/: README.md  demo.py  demo_en.py  driver.py  owner_agent.py  run.py  server.py  team.py
(+485 files in other folders)
