[project]
name = "glimi"
version = "0.1.0"
description = "Claude Agent 기반 소셜 시뮬레이션 시스템"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "Pillow>=10.0.0",
    "textual>=0.40.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.0",
]

[project.scripts]
glimi-cli = "src.cli:main"
glimi-bot = "src.discord_bot:main"
