[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glimi"
version = "0.1.0"
description = "Glimi Core — a domain-neutral, platform-neutral multi-agent kernel (agent runtime, layered memory, <tools> protocol, conversation engine)."
readme = "PYPI_README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Jaebin Sim" }]
keywords = ["agent", "multi-agent", "llm", "memory", "claude", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# 커널은 표준 라이브러리만으로 동작한다.
#   - Claude: Claude CLI 를 subprocess 로 호출 (SDK 불필요)
#   - Ollama: urllib (stdlib) 로 로컬 HTTP 호출
# Anthropic SDK 직접 호출 경로가 필요하면 `pip install glimi[sdk]`.
dependencies = []

[project.optional-dependencies]
# Anthropic Python SDK 로 직접 호출하고 싶을 때 (CLI 대신).
sdk = ["anthropic>=0.40"]

# Glimi Community (쇼케이스 앱) 전체 실행에 필요한 것 — Discord 어댑터 + 웹 대시보드.
# 설치: pip install -e ".[community]"
community = [
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "Pillow>=10.0.0",
    "textual>=0.40.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.0",
]

# 로컬 프로필 이미지 생성 (Animagine XL 4.0 + Glimi Style LoRA).
# 설치: pip install -e ".[imagegen]"
# LoRA 가중치는 src/glimi_imagegen/loras/ 에 별도 배치 (gitignore — 93MB × 2).
imagegen = [
    "torch>=2.1",
    "diffusers>=0.27",
    "transformers>=4.36",
    "accelerate",
    "peft>=0.10",        # diffusers 0.30+ LoRA 로딩 백엔드 — 없으면 ValueError
    "safetensors",
    "opencv-python",
    "numpy",
]

# 배포 대상은 커널(glimi) 패키지만. 쇼케이스 앱(src/*)은 모노레포 소스에서 실행한다.
[tool.setuptools]
packages = ["glimi", "glimi.llm", "glimi.tools"]
