[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glimi"
version = "0.1.0"
description = "Glimi Core — a domain-neutral, platform-neutral multi-agent kernel (agent runtime, layered memory, <tools> protocol, conversation engine)."
readme = "PYPI_README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Jaebin Sim" }]
keywords = ["agent", "multi-agent", "llm", "memory", "claude", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# 커널은 표준 라이브러리만으로 동작한다.
#   - Claude: Claude CLI 를 subprocess 로 호출 (SDK 불필요)
#   - Ollama: urllib (stdlib) 로 로컬 HTTP 호출
# Anthropic SDK 직접 호출 경로가 필요하면 `pip install glimi[sdk]`.
dependencies = []

[project.optional-dependencies]
# Anthropic Python SDK 로 직접 호출하고 싶을 때 (CLI 대신).
sdk = ["anthropic>=0.40"]

# Glimi Core 대시보드 (store-driven · read-only 웹).
#   `import glimi.dashboard` (= DashboardReader) 는 zero-dep 유지 — 아래 deps 는
#   serve() / app.py (FastAPI 앱) 를 실제 띄울 때만 필요.
#   설치: pip install "glimi[dashboard]"
dashboard = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
]

# Glimi Community (쇼케이스 앱) 전체 실행에 필요한 것 — Discord 어댑터 + 웹 대시보드.
# 설치: pip install -e ".[community]"
community = [
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "Pillow>=10.0.0",
    "textual>=0.40.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.0",
]

# 로컬 프로필 이미지 생성 (Animagine XL 4.0 + Glimi Style LoRA).
# 설치: pip install -e ".[imagegen]"
# LoRA 가중치는 community/glimi_imagegen/loras/ 에 별도 배치 (gitignore — 93MB × 2).
imagegen = [
    "torch>=2.1",
    "diffusers>=0.27",
    "transformers>=4.36",
    "accelerate",
    "peft>=0.10",        # diffusers 0.30+ LoRA 로딩 백엔드 — 없으면 ValueError
    "safetensors",
    "opencv-python",
    "numpy",
]

# 배포 대상은 커널(glimi) 패키지만. 쇼케이스 앱(community/*)은 모노레포 소스에서 실행한다.
[tool.setuptools]
packages = ["glimi", "glimi.llm", "glimi.tools", "glimi.dashboard", "glimi.stores", "glimi.edd"]

# 대시보드 웹 자산 (templates/static/i18n) 을 휠에 포함 — glimi[dashboard] 로 설치 시 필요.
# templates/**/*.html: 중첩(dashboard/index.html)까지. i18n/*.json: 언어 피커 사전.
[tool.setuptools.package-data]
"glimi.dashboard" = [
    "templates/*.html",
    "templates/**/*.html",
    "static/css/*.css",
    "static/js/*.js",
    "i18n/*.json",
]
# 커널 기본 행동 스킬 (SKILL.md + locale 예시) — 앱이 build_skills_section 으로 주입.
"glimi" = [
    "skills/**/*.md",
]
